# hotel-booking

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.py  start.sh  启动.bat
.claude/: settings.local.json
.playwright-mcp/: page-2026-06-07T14-48-05-400Z.yml  page-2026-06-07T14-50-38-295Z.yml  page-2026-06-07T14-51-24-221Z.yml  page-2026-06-07T14-52-03-614Z.yml  page-2026-06-07T14-59-54-780Z.yml  page-2026-06-07T15-00-49-928Z.yml  page-2026-06-07T15-02-20-803Z.yml  page-2026-06-07T15-02-39-937Z.yml  page-2026-06-07T15-03-19-767Z.yml  page-2026-06-07T15-05-43-101Z.yml  page-2026-06-07T15-15-46-318Z.yml  page-2026-06-07T15-16-06-494Z.yml  page-2026-06-07T15-16-17-611Z.yml  page-2026-06-07T15-16-29-835Z.yml  page-2026-06-07T15-25-08-932Z.yml  page-2026-06-07T15-25-57-293Z.yml  page-2026-06-08T03-59-29-974Z.yml  page-2026-06-08T04-05-16-761Z.yml  page-2026-06-08T04-06-44-455Z.yml  page-2026-06-08T04-46-08-402Z.yml  page-2026-06-08T04-54-53-340Z.yml  page-2026-06-08T04-57-59-177Z.yml  page-2026-06-08T04-58-54-725Z.yml  page-2026-06-08T05-06-08-940Z.yml  page-2026-06-08T05-07-05-700Z.yml  page-2026-06-08T05-21-58-847Z.yml  page-2026-06-08T05-23-52-679Z.yml  page-2026-06-08T05-28-14-412Z.yml  page-2026-06-08T05-28-28-195Z.yml  page-2026-06-08T05-31-12-294Z.yml  page-2026-06-08T05-31-32-991Z.yml  page-2026-06-08T05-33-55-307Z.yml  page-2026-06-08T05-34-09-409Z.yml  page-2026-06-08T05-34-31-403Z.yml  page-2026-06-08T05-36-45-291Z.yml  page-2026-06-08T05-37-16-372Z.yml  page-2026-06-08T05-39-28-842Z.yml  page-2026-06-08T05-39-37-688Z.yml  page-2026-06-08T05-39-50-073Z.yml  page-2026-06-08T05-40-02-041Z.yml  (+86 more)
app/: __init__.py  commands.py  forms.py  models.py
app/routes/: admin.py  auth.py  booking.py  credit_manage.py  frontdesk.py  hotel.py  main.py  query.py  review.py
app/static/css/: style.css
app/static/js/: bg-animation.js
app/templates/: base.html  index.html
app/templates/admin/: roles.html  settings.html  users.html
app/templates/auth/: login.html  (+1 more)
migrations/versions/: e389d6fcf4d7_init_全部数据表.py
(+15 files in other folders)
